# quickdrop

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  main.rs
.github/workflows/: ci.yml
