[package]
name = "quickdrop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quickdrop"
path = "main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
dotenvy = "0.15"
rand = "0.8"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
